feat(auth): add cognition authentication
