# src/presentation/controllers/openapi.yml
@@ -8,6 +8,8 @@ paths:
   /users:
     get:
       summary: Get all users
+      security:
+        - CognitoAuthorizer: []
       responses:
         '200':
           description: List of users
@@ -25,6 +27,8 @@ paths:
         passthroughBehavior: when_no_match
     post:
       summary: Create a new user
+      security:
+        - CognitoAuthorizer: []
       requestBody:
         required: true
         content:
@@ -74,6 +78,8 @@ paths:
   /users/{userId}:
     get:
       summary: Get user by ID
+      security:
+        - CognitoAuthorizer: []
       parameters:
         - name: userId
           in: path
@@ -173,6 +179,8 @@ paths:
   /audio:
     post:
       summary: Audio operations
+      security:
+        - CognitoAuthorizer: []
       requestBody:
         required: true
         content:
@@ -228,6 +236,8 @@ paths:
   /audio/{audioFileKey}:
     get:
       summary: Get download URL for audio file
+      security:
+        - CognitoAuthorizer: []
       parameters:
         - name: audioFileKey
           in: path
@@ -249,6 +259,8 @@ paths:
         passthroughBehavior: when_no_match
     delete:
       summary: Delete audio file
+      security:
+        - CognitoAuthorizer: []
       parameters:
         - name: audioFileKey
           in: path
@@ -496,6 +508,17 @@ paths:
         passthroughBehavior: when_no_match
 
 components:
+  securitySchemes:
+    CognitoAuthorizer:
+      type: apiKey
+      name: Authorization
+      in: header
+      x-amazon-apigateway-authtype: cognito_user_pools
+      x-amazon-apigateway-authorizer:
+        type: cognito_user_pools
+        providerARNs:
+          - Fn::GetAtt: CognitoUserPool.Arn
+  
   schemas:
     User:
       type: object
